--- a/index.html
+++ b/index.html
@@ -55,14 +55,11 @@
     <div class="sp-container">
         <div class="sp-content">
             <div class="sp-globe"></div>
-            <h2 class="frame-1">Gửi em</h2>
-            <h2 class="frame-2">Người con gái</h2>
-            <h2 class="frame-3">Mà Anh Thương Nhớ</h2>
-            <h2 class="frame-4">Yêu em</h2>
+            <h2 class="frame-1">Mãi yêu</h2>
             <h2 class="frame-5">
-                <span>Huỳnh</span>
-                <span>Thị</span>
-                <span>Cẩm Duyên</span>
+                <span>Ngô</span>
+                <span>Ngọc</span>
+                <span>Huyền</span>
             </h2>
             
         </div>
