change girl friend name

--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
     <div class="sp-container">
         <div class="sp-content">
             <div class="sp-globe"></div>
-            <h2 class="frame-1">Mãi yêu</h2>
+            <h2 class="frame-1">Mãi yêu công chúa của anh</h2>
             <h2 class="frame-5">
-                <span>Ngô</span>
+                <span>Lê</span>
+                <span>Thị</span>
                 <span>Ngọc</span>
-                <span>Huyền</span>
+                <span>Yến</span>
             </h2>
             
         </div>
